# utility-repo-scripts

./: .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .mdl_style.rb  .pre-commit-config.yaml  .prettierignore  .pylintrc  README.md  ensure_venv.sh  pyproject.toml  setup  setup_custom_after_setup_script.sh  setup_fix_prettier_pre_commit.py  setup_fix_prettier_pre_commit.sh  setup_flake8.py  setup_flake8.sh  setup_install_dependencies.sh  setup_pre_commit_config.py  setup_pre_commit_config.sh  setup_prettier.py  setup_prettier.sh  setup_prettierrc.py  setup_prettierrc.sh  setup_pylintrc.py  setup_pylintrc.sh  setup_pyproject_toml.py  setup_pyproject_toml.sh  setup_python_app.sh  setup_tox_ini.py  setup_tox_ini.sh  setup_vscode.py  setup_vscode.sh  setup_vscode_settings.py  test.sh  tox.ini
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: dependabot-auto-merge.yml  python.yml  python_3_10.yml  python_3_11.yml  python_3_12.yml  python_3_8.yml  python_3_9.yml
scripts/: format.sh  functions.sh  process_cli_options.sh  setup_custom_after_setup_script.sh  setup_flake8.sh  setup_install_dependencies.sh  setup_pre_commit_config.sh  setup_prettier.sh  setup_pylintrc.sh  setup_pyproject_toml.sh  setup_vscode.sh
scripts/utils/: format.sh  functions.sh  testing.sh
src/: __init__.py  process_flake8.py  process_pre_commit_config.py  process_prettier.py  process_pylintrc.py  process_pyproject_toml.py  process_tox_ini.py  process_vscode_settings.py  setup_flake8.py  setup_pre_commit_config.py  setup_prettier.py  setup_pylintrc.py  setup_pyproject_toml.py  setup_vscode.py
src/constants/: __init__.py  flake8.py  pre_commit_config.py  prettier.py  pylintrc.py  pyproject_toml.py  shared.py  tox_ini.py  vscode_settings.py
src/processors/: __init__.py  process_flake8.py  process_prettier.py  process_pylintrc.py  process_vscode_settings.py
src/utils/: configupdater.py  core.py  tomlkit.py
src/utils/ruamel/: __init__.py  yaml.py
tests/: __init__.py  test_ensure_venv_sh.py  test_functions_sh.py  test_process_prettier.py  test_setup_python_app_sh.py  test_utils.py
tests/process_flake8/: test_can_parse_sample_flake8.py  test_process_flake8.py
tests/process_pre_commit_config/: __init__.py  test_can_parse_sample_pre_commit_config.py  test_process_pre_commit_config.py
tests/process_pylintrc/: __init__.py  test_can_parse_sample_pylintrc.py  test_process_pylintrc.py
tests/process_pyproject_toml/: __init__.py  test_can_parse_sample_pyproject_toml.py  test_process_pyproject_toml.py
tests/process_tox_ini/: __init__.py  test_can_parse_sample_tox_ini.py  test_process_tox_ini.py
tests/process_vscode_settings/: assert_utils.py  test_all_settings.py  test_default_interpreter_path_settings.py  test_isort_settings.py  test_optional_feature_flags.py  test_python_analysis_settings.py  test_python_formatter_settings.py  test_python_linter_settings.py  test_python_testing_framework_settings.py  test_search_exclude_settings.py
tests/process_vscode_settings/existing_data/: test_all_settings.py  test_default_interpreter_path_settings.py  test_isort_settings.py  test_optional_feature_flags.py  test_python_analysis_settings.py  test_python_formatter_settings.py  test_python_linter_settings.py  test_python_testing_framework_settings.py  test_search_exclude_settings.py
tests/processors/process_flake8/: __init__.py  test_can_parse_sample_flake8.py  test_process_flake8.py
tests/processors/process_pre_commit_config/: test_can_parse_sample_pre_commit_config.py  test_process_pre_commit_config.py
tests/processors/process_pylintrc/: test_process_pylintrc.py  (+1 more)
(+20 files in other folders)
