[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "utility-repo-scripts"
version = "0.0.1"
description = "Utility package to setup a development workspace"
authors = ["Matthew Lonis <mattlonis@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
configupdater = "^3.1.1"
ruamel-yaml = "^0.18.6"
tomlkit = "^0.13.2"

[tool.poetry.group.test.dependencies]
flake8 = "^7.1.1"
greenlet = "^3.1.0"
mypy = "^1.13.0"
pylint = "^3.2.7"
pylint-junit = "^0.3.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-xdist = { version = "^3.2.1", extras = ["psutil"] }
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
black = "^24.8.0"
isort = "^5.12.0"
pip-tools = "^7.3.0"
pre-commit = "^4.0.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pytest.ini_options]
addopts = "--ignore=./utility-repo-scripts/**"
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
