[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "utility-repo-scripts"
version = "0.0.1"
description = "Utility package to setup a development workspace"
authors = ["Matthew Lonis <mattlonis@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13.1"
configupdater = "^3.1.1"
ruamel-yaml = "^0.18.14"
tomlkit = "^0.13.3"

[tool.poetry.group.test.dependencies]
flake8 = "^7.2.0"
greenlet = "^3.2.2"
mypy = "^1.15.0"
pylint = "^3.3.7"
pylint-junit = "^0.3.5"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-xdist = { version = "^3.2.1", extras = ["psutil"] }
tomli = "^2.2.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
black = "^25.1.0"
isort = "^6.0.1"
pip-tools = "^7.3.0"
pre-commit = "^4.2.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pytest.ini_options]
addopts = "--ignore=./utility-repo-scripts/**"
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
