[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "utility-repo-scripts"
version = "0.0.1"
description = "Utility package to setup a development workspace"
authors = ["Matthew Lonis <mattlonis@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13.9"
configupdater = "^3.1.1"
ruamel-yaml = "^0.19.1"
tomlkit = "^0.13.3"

[tool.poetry.group.test.dependencies]
flake8 = "^7.2.0"
greenlet = "^3.3.0"
mypy = "^1.19.1"
pylint = "^4.0.4"
pylint-junit = "^0.3.5"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-xdist = { version = "^3.2.1", extras = ["psutil"] }
tomli = "^2.3.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
black = "^25.12.0"
isort = "^7.0.0"
pip-tools = "^7.5.2"
pre-commit = "^4.5.1"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pytest.ini_options]
addopts = "--ignore=./utility-repo-scripts/**"
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
